--- a/src/templates/interactive.html
+++ b/src/templates/interactive.html
@@ -31,8 +31,8 @@
             success: function(data) {
                 var stuff = data[40].race_name
                 console.log(data);
-                console.log(data[40].race_name);
-                $("#inner").innerHTML = str(stuff);
+                console.log(stuff);
+                $("#inner").innerHTML = stuff;
                 //race_data = '';
                 //$select.find('<option>').remove();
                 //$.each(data, function(key, value) {
