--- a/src/templates/interactive.html
+++ b/src/templates/interactive.html
@@ -15,7 +15,7 @@
                 <option>Choose Series</option>
                 </select>
             </form>
-        <h4>{{ ser_list[15]["race_name"] }}</h4>
+        <h4>{{ ser_list[30]["race_name"] }}</h4>
         <p id="result"></p>
         <ul class="inner" id="inner">hello
             <li id="first"></li>
@@ -34,7 +34,7 @@
                 var stuff = data[40].race_name
                 console.log(data);
                 console.log(stuff);
-                $("#first").text(stuff);
+                $("#first").text(stuff).active();
                 //race_data = '';
                 //$select.find('<option>').remove();
                 //$.each(data, function(key, value) {
