--- a/src/templates/interactive.html
+++ b/src/templates/interactive.html
@@ -7,7 +7,7 @@
     <div class="container">
         <h3>Welcome!  Best programming language</h3>
             <form>
-                <input type="text" size="15" name="proglang" id="text_input">
+                <input type="text" size="15" name="proglang" id="text_input" value="CUP">
                 <a href="#" id="process_input"><button class="btn btn-default">Submit</button></a>
             </form>
             <form>
