--- a/src/templates/interactive.html
+++ b/src/templates/interactive.html
@@ -35,7 +35,7 @@
                 var stuff = data[40].race_name
                 console.log(data);
                 console.log(stuff);
-                $("#first").text(stuff);
+                $("#first").text(stuff).show();
                 //race_data = '';
                 //$select.find('<option>').remove();
                 //$.each(data, function(key, value) {
