--- a/src/templates/interactive.html
+++ b/src/templates/interactive.html
@@ -18,7 +18,7 @@
         <h4>{{ ser_list[30]["race_name"] }}</h4>
         <p id="result"></p>
         <ul class="inner" id="inner">hello
-            <li id="first" active></li>
+            <li id="first"></li>
         </ul>
     </div>
 <script>
