--- a/src/templates/interactive.html
+++ b/src/templates/interactive.html
@@ -15,9 +15,10 @@
                 <option>Choose Series</option>
                 </select>
             </form>
-        <h4>{{ ser_list[30]["race_name"] }}</h4>
+        <p>{{ ser_list[30]["race_name"] }}</p>
         <p id="result"></p>
-        <ul class="inner" id="inner">hello
+
+        <ul class="list-group" id="other">
             <li class="list-group-item" id="first"></li>
         </ul>
     </div>
