--- a/src/templates/interactive.html
+++ b/src/templates/interactive.html
@@ -12,7 +12,7 @@
             </form>
             <form>
                 <select class="custom-select" id="series_drop_down" name="series_drop_down">
-                <option id="test_option">Choose Series</option>
+                <option id="test_option"></option>
                 </select>
             </form>
         <p>{{ ser_list[30]["race_name"] }}</p>
