--- a/src/templates/interactive.html
+++ b/src/templates/interactive.html
@@ -32,7 +32,7 @@
             data: {proglang: $('input[name="proglang"]').val()},
             dataType:"json",
             success: function(data) {
-                var stuff = data[40].race_name
+                var stuff = data[40].race_name;
                 console.log(data);
                 console.log(stuff);
                 $("#test_option").text(stuff);
