--- a/src/templates/interactive.html
+++ b/src/templates/interactive.html
@@ -12,7 +12,9 @@
             </form>
             <form>
                 <select class="custom-select" id="series_drop_down" name="series_drop_down">
-                <option id="test_option"></option>
+                    <option id="test_option"></option>
+                    <option id="test_option1"></option>
+                    <option id="test_option2"></option>
                 </select>
             </form>
         <p>{{ ser_list[30]["race_name"] }}</p>
