--- a/src/templates/interactive.html
+++ b/src/templates/interactive.html
@@ -38,7 +38,7 @@
                 var stuff = data[40].race_name;
                 console.log(data);
                 console.log(stuff);
-                $("#series_drop_down").append('<option>' + stuff + '</option>);
+                $("#series_drop_down").append('<option>' + stuff + '</option>');
                 //race_data = '';
                 //$select.find('<option>').remove();
                 //$.each(data, function(key, value) {
