--- a/src/templates/interactive.html
+++ b/src/templates/interactive.html
@@ -35,7 +35,7 @@
             data: {proglang: $('input[name="proglang"]').val()},
             dataType:"json",
             success: function(data) {
-                $select.find('<option>').remove();
+                $('select').find('<option>').remove();
                 var stuff = data[40].race_name;
                 console.log(data);
                 console.log(stuff);
