--- a/src/templates/interactive.html
+++ b/src/templates/interactive.html
@@ -8,10 +8,10 @@
         <h3>Welcome!  Best programming language</h3>
             <form>
                 <input type="text" size="15" name="proglang" id="text_input" value="CUP">
-                <a href="#" id="process_input"><button class="btn btn-default">Submit</button></a>
+                <a href="#" id="process_input1"><button class="btn btn-default">Submit</button></a>
             </form>
             <div class="input-group mb-3">
-                <a href="#" id="process_input1"><select class="custom-select" id="series_drop_down" name="series_drop_down">
+                <a href="#" id="process_input"><select class="custom-select" id="series_drop_down" name="series_drop_down">
                     <option>Choose Series</option>
                     <option selected value="CUP">CUP</option>
                     <option value="XFINITY">XFINITY</option>
