--- a/src/templates/interactive.html
+++ b/src/templates/interactive.html
@@ -40,7 +40,7 @@
                 console.log(data);
                 console.log(stuff);
                 //$("#series_drop_down").append('<option>' + stuff + '</option>');
-                //race_data = '';
+                race_data = '';
                 $.each(data, function() {
                     race_data += '<option>'+$this.race_name+'</option>';
                 });  // end each
