--- a/src/templates/interactive.html
+++ b/src/templates/interactive.html
@@ -38,7 +38,7 @@
             success: function(data) {
                 //var stuff = data[40].race_name;
                 console.log(data);
-                console.log(stuff);
+                //console.log(stuff);
                 //$("#series_drop_down").append('<option>' + stuff + '</option>');
                 race_data = '';
                 $.each(data, function() {
