--- a/src/templates/interactive.html
+++ b/src/templates/interactive.html
@@ -7,14 +7,20 @@
     <div class="container">
         <h3>Welcome!  Best programming language</h3>
             <form>
-                <input type="text" size="15" name="proglang" id="text_input" >
-                <a href="#" id="process_input1"><button class="btn btn-default">Submit</button></a>
+                <div class="input-group mb-3">
+                    <a href="#" id="process_input"><select class="custom-select" id="series_drop_down" name="series_drop_down">
+                    <option>Choose Series</option>
+                    <option selected value="CUP">CUP</option>
+                    <option value="XFINITY">XFINITY</option>
+                    <option value="TRUCK">TRUCK</option>
+                    </select></a>
+                </div>
+
+                <div class="input-group mb-3">
+                    <a href="#" id="process_input1"><select class="custom-select" id="race_drop_down" name="race_drop_down">
+                    </select></a>
+                </div>
             </form>
-            <div class="input-group mb-3">
-                <a href="#" id="process_input"><select class="custom-select" id="series_drop_down" name="series_drop_down">
-                    
-                </select></a>
-            </div>
         <p>{{ ser_list[30]["race_name"] }}</p>
         <p id="result"></p>
    </div>
@@ -24,13 +30,13 @@
 
 <script>
     $(document).ready(function() {
-        $('#process_input1').bind('click', function() {
-            $('#series_drop_down option').remove();
+        $('#process_input').change(function() {
+            $('#race_drop_down option').remove();
             $.ajax({
             type: "GET",
             url: "/backgroundProcess",
             processData: "true",
-            data: {proglang: $('input[name="proglang"]').val()},
+            data: {proglang: $('input[name="series_drop_down"]').val()},
             dataType:"json",
             success: function(data) {
                 //var stuff = data[40].race_name;
@@ -41,7 +47,7 @@
                 $.each(data, function() {
                     race_data += '<option>'+ $(this).attr('race_name') + '@' + $(this).attr('track') +'</option>';
                 });  // end each
-                $('#series_drop_down').append(race_data);
+                $('#race_drop_down').append(race_data);
             }  //end success
             });  //end ajax
         });  // end process input
