--- a/src/templates/interactive.html
+++ b/src/templates/interactive.html
@@ -9,8 +9,8 @@
             <form>
                 <div class="input-group mb-3">
                     <a href="#" id="process_input"><select class="custom-select" id="series_drop_down" name="series_drop_down">
-                    <option>Choose Series</option>
-                    <option selected value="CUP">CUP</option>
+                    <option selected>Choose Series</option>
+                    <option value="CUP">CUP</option>
                     <option value="XFINITY">XFINITY</option>
                     <option value="TRUCK">TRUCK</option>
                     </select></a>
