--- a/src/templates/interactive.html
+++ b/src/templates/interactive.html
@@ -36,7 +36,7 @@
             $.ajax({
             type: "GET",
             url: "/backgroundProcess",
-            processData: "true",
+            processData: "false",
             data: {proglang: $('input[name="series_drop_down"]').val()},
             dataType:"json",
             success: function(data) {
