--- a/src/templates/interactive.html
+++ b/src/templates/interactive.html
@@ -8,7 +8,7 @@
         <h3>Welcome!  Best programming language</h3>
             <form>
                 <div class="input-group mb-3">
-                    <a href="#" id="process_input"><select class="custom-select" id="series_drop_down" name="series_drop_down">
+                    <a href="#" id="process_input_s"><select class="custom-select" id="series_drop_down" name="series_drop_down">
                     <option selected>Choose Series</option>
                     <option value="CUP">CUP</option>
                     <option value="XFINITY">XFINITY</option>
@@ -17,7 +17,7 @@
                 </div>
 
                 <div class="input-group mb-3">
-                    <a href="#" id="process_input1"><select class="custom-select" id="race_drop_down" name="race_drop_down">
+                    <a href="#" id="process_input_r"><select class="custom-select" id="race_drop_down" name="race_drop_down">
 
                     </select></a>
                 </div>
