--- a/src/templates/nascar_admin.html
+++ b/src/templates/nascar_admin.html
@@ -122,7 +122,7 @@ $(document).ready(function() {
             type: "GET",
             url: "/ajax_get_races",
             processData: "false",
-            data: {series: $('input[name="series_drop_down"]').val()},
+            data: {series: $('select[name="series_drop_down"]').val()},
             dataType:"json",
             success: function(data) {
                 console.log(data);
