--- a/src/templates/drivers_load.html
+++ b/src/templates/drivers_load.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="container">
+    <p>{{  text  }}</p>
     <h2>Drivers Loaded for {{ entrant['race_name'] }} </h2>
     <table class="table table-striped">
         <thead class="thead-light">
