added entrants object with sportradar and load to mongo

--- a/src/templates/test.html
+++ b/src/templates/test.html
@@ -2,26 +2,10 @@
 {% block content %}
 
 
-    <div class="container">
-        <div class="media">
-            <img src='/static/images/IMG_9972.jpg' class="img-responsive" alt="Image not Avail">
-        </div>
-        <div class ="row">
-            <div class="column">
-                <h5 class="mt-0">Everything Horse.com</h5>
-            </div>
-        </div>
-        <div class ="row">
-            <div class ="column">
-                <h6>This website enables you to manage everything related horses and running a barn.  Sign up or login in MoFo!!</h6>
-            </div>
-        </div>
 
-        <a href="/login"><button type="submit" class="btn btn-success" >Log in</button></a>
-        <a href="/register"><button type="submit" class="btn btn-success" >Register</button></a>
 
-        <p>{{  test  }}</p>
-        </div>
+        <p>{{  text  }}</p>
+
 
 
 
