--- a/src/templates/nascar_admin.html
+++ b/src/templates/nascar_admin.html
@@ -61,54 +61,35 @@
         </div>
         <button type="submit" class="btn btn-success" >Load Data</button>
     </form>
-    <form id="loadQualify" action="/nascar/load" method="post">
-        <div class="form-row">
-            <div class="form-group col-md-6" id="qual_type">
-                <label for="description">Type Parameter</label>
-                <input type="text" id="typeQual" class="form-control" name="type" value="races" readonly>
-            </div>
-            <div class="form-group col-md-6" id="qual_race_id">
-                <label for="description">Race ID</label>
-                <input type="text" id="race_IDQual" class = "form-control" name="race_ID">
-            </div>
-            <div class="form-group col-md-6" id="qual_series">
-                <label for="description">Series (sc = CUP, xf = Xfinity, go = Truck)</label>
-                <input type="text" id="seriesQual" class = "form-control" name="series" value="sc">
-            </div>
-            <div class="form-group col-md-6" id="qual_file">
-                <label for="description">File</label>
-                <input type="text" id="fileQual" class = "form-control" name="file" value="qualifying.json" readonly>
-            </div>
-        </div>
-        <button type="submit" class="btn btn-success" >Load Data</button>
-    </form>
+
+
 </div>
 <script>
 $(document).ready(function() {
-    $('#loadRaces').hide();
-    $('#loadEntrants').hide();
-    $('#loadQualify').hide();
-    $(':radio').click(function() {
-        var checkedValue = $('input[name="exampleRadios"]:checked').val()
-        if (checkedValue == "Races") {
-            $('#loadRaces').show();
-            $('#loadEntrants').hide();
-            $('#loadQualify').hide();
-        } else if (checkedValue == "Entrants") {
-            $('#loadRaces').hide();
-            $('#loadEntrants').show();
-            $('#loadQualify').hide();
-            $('#entrant_file').hide();
-            $('#entrant_type').hide();
-         } else if (checkedValue == "Qualify") {
-            $('#loadRaces').hide();
-            $('#loadEntrants').hide();
-            $('#loadQualify').show();
-            $('#qual_file').hide();
-            $('#qual_type').hide();
-         } else {
-             alert ("Nothing was chosen which shouldnt happen")
-         }
+    //$('#loadRaces').hide();
+    //$('#loadEntrants').hide();
+    //$('#loadQualify').hide();
+    //$(':radio').click(function() {
+    //    var checkedValue = $('input[name="exampleRadios"]:checked').val()
+    //    if (checkedValue == "Races") {
+    //        $('#loadRaces').show();
+    //        $('#loadEntrants').hide();
+    //        $('#loadQualify').hide();
+    //    } else if (checkedValue == "Entrants") {
+    //        $('#loadRaces').hide();
+    //        $('#loadEntrants').show();
+    //        $('#loadQualify').hide();
+    //        $('#entrant_file').hide();
+    //        $('#entrant_type').hide();
+    //     } else if (checkedValue == "Qualify") {
+    //        $('#loadRaces').hide();
+    //        $('#loadEntrants').hide();
+    //        $('#loadQualify').show();
+    //        $('#qual_file').hide();
+    //        $('#qual_type').hide();
+    //     } else {
+    //         alert ("Nothing was chosen which shouldnt happen")
+    //     }
     }); //end radio
     $('#process_input_se').change(function() {
         $('#race_drop_down_re option').remove();
