--- a/src/templates/nascar_admin.html
+++ b/src/templates/nascar_admin.html
@@ -41,71 +41,96 @@
         </div>
         <button type="submit" class="btn btn-success" >Load Data</button>
     </form>
-    <form id="loadEntrants" action="/nascar/load/entrants" method="post">
+    <form id="loadEntrants" action="/nascar/load" method="post">
         <div class="form-row">
-
+            <div class="form-group col-md-6" id="entrant_type">
+                <label for="description">Type Parameter</label>
+                <input type="text" id="typeEntrantOther" class="form-control" name="type" value="races" readonly>
+            </div>
             <div class="input-group mb-3">
-                <a href="#" id="process_input_se"><select class="custom-select" id="series_drop_down_se" name="series_drop_down_se">
+                <a href="#" id="process_input"><select class="custom-select" id="series_drop_down" name="series_drop_down">
                     <option selected>Choose Series</option>
-                    <option value="sc">CUP</option>
-                    <option value="xf">XFINITY</option>
-                    <option value="go">TRUCK</option>
+                    <option value="CUP">CUP</option>
+                    <option value="XFINITY">XFINITY</option>
+                    <option value="TRUCK">TRUCK</option>
                 </select></a>
             </div>
             <div class="input-group mb-3">
-                <a href="#" id="process_input_ser"><select class="custom-select" id="race_drop_down_re" name="race_drop_down_re">
+                <a href="#" id="process_input_r"><select class="custom-select" id="race_drop_down" name="race_drop_down">
                 </select></a>
 
             </div>
-
+            <div class="form-group col-md-6" id="entrant_file">
+                <label for="description">File</label>
+                <input type="text" id="fileEntrant" class = "form-control" name="file" value="entry_list.json" readonly>
+            </div>
         </div>
         <button type="submit" class="btn btn-success" >Load Data</button>
     </form>
-
-
+    <form id="loadQualify" action="/nascar/load" method="post">
+        <div class="form-row">
+            <div class="form-group col-md-6" id="qual_type">
+                <label for="description">Type Parameter</label>
+                <input type="text" id="typeQual" class="form-control" name="type" value="races" readonly>
+            </div>
+            <div class="form-group col-md-6" id="qual_race_id">
+                <label for="description">Race ID</label>
+                <input type="text" id="race_IDQual" class = "form-control" name="race_ID">
+            </div>
+            <div class="form-group col-md-6" id="qual_series">
+                <label for="description">Series (sc = CUP, xf = Xfinity, go = Truck)</label>
+                <input type="text" id="seriesQual" class = "form-control" name="series" value="sc">
+            </div>
+            <div class="form-group col-md-6" id="qual_file">
+                <label for="description">File</label>
+                <input type="text" id="fileQual" class = "form-control" name="file" value="qualifying.json" readonly>
+            </div>
+        </div>
+        <button type="submit" class="btn btn-success" >Load Data</button>
+    </form>
 </div>
 <script>
 $(document).ready(function() {
-    //$('#loadRaces').hide();
-    //$('#loadEntrants').hide();
-    //$('#loadQualify').hide();
-    //$(':radio').click(function() {
-    //    var checkedValue = $('input[name="exampleRadios"]:checked').val()
-    //    if (checkedValue == "Races") {
-    //        $('#loadRaces').show();
-    //        $('#loadEntrants').hide();
-    //        $('#loadQualify').hide();
-    //    } else if (checkedValue == "Entrants") {
-    //        $('#loadRaces').hide();
-    //        $('#loadEntrants').show();
-    //        $('#loadQualify').hide();
-    //        $('#entrant_file').hide();
-    //        $('#entrant_type').hide();
-    //     } else if (checkedValue == "Qualify") {
-    //        $('#loadRaces').hide();
-    //        $('#loadEntrants').hide();
-    //        $('#loadQualify').show();
-    //        $('#qual_file').hide();
-    //        $('#qual_type').hide();
-    //     } else {
-    //         alert ("Nothing was chosen which shouldnt happen")
-    //     }
+    $('#loadRaces').hide();
+    $('#loadEntrants').hide();
+    $('#loadQualify').hide();
+    $(':radio').click(function() {
+        var checkedValue = $('input[name="exampleRadios"]:checked').val()
+        if (checkedValue == "Races") {
+            $('#loadRaces').show();
+            $('#loadEntrants').hide();
+            $('#loadQualify').hide();
+        } else if (checkedValue == "Entrants") {
+            $('#loadRaces').hide();
+            $('#loadEntrants').show();
+            $('#loadQualify').hide();
+            $('#entrant_file').hide();
+            $('#entrant_type').hide();
+         } else if (checkedValue == "Qualify") {
+            $('#loadRaces').hide();
+            $('#loadEntrants').hide();
+            $('#loadQualify').show();
+            $('#qual_file').hide();
+            $('#qual_type').hide();
+         } else {
+             alert ("Nothing was chosen which shouldnt happen")
+         }
     }); //end radio
-    $('#process_input_se').change(function() {
-        $('#race_drop_down_re option').remove();
+    $('#process_input').change(function() {
+        $('#race_drop_down option').remove();
         $.ajax({
             type: "GET",
             url: "/ajax_get_races",
-            processData: "true",
-            data: {series: $('select[name="series_drop_down_se"]').val()},
+            processData: "false",
+            data: {series: $('select[name="series_drop_down"]').val()},
             dataType:"json",
             success: function(data) {
                 console.log(data);
                 race_data = '';
                 $.each(data, function() {
-                    race_data += '<option value=\"' +$(this).attr('race_id')+ '\">'+ $(this).attr('race_name') + ' @ ' + $(this).attr('track') +'</option>';
+                    race_data += '<option name=\"' +$(this).attr('race_id')+ '\">'+ $(this).attr('race_name') + ' @ ' + $(this).attr('track') +'</option>';
                 });  // end each
-                $('#race_drop_down_re').append(race_data);
+                $('#race_drop_down').append(race_data);
             }  //end success
         });  //end ajax
     });  // end process input
