reverting Nascar_admin back to workng ver

--- a/src/templates/nascar_admin.html
+++ b/src/templates/nascar_admin.html
@@ -50,9 +50,9 @@
             <div class="input-group mb-3">
                 <a href="#" id="process_input"><select class="custom-select" id="series_drop_down" name="series_drop_down">
                     <option selected>Choose Series</option>
-                    <option value="CUP">CUP</option>
-                    <option value="XFINITY">XFINITY</option>
-                    <option value="TRUCK">TRUCK</option>
+                    <option value="sc">CUP</option>
+                    <option value="xf">XFINITY</option>
+                    <option value="go">TRUCK</option>
                 </select></a>
             </div>
             <div class="input-group mb-3">
