took out jquery command on nascar admin

--- a/src/templates/nascar_admin.html
+++ b/src/templates/nascar_admin.html
@@ -56,7 +56,7 @@
                 </select></a>
             </div>
             <div class="input-group mb-3">
-                <a href="#" id="process_input_r"><select class="custom-select" id="race_drop_down" name="race_drop_down">
+                <a href="#" id="process_input_r"><select class="custom-select" id="race_drop_down" name="race_drop_down_abc">
 
                 </select></a>
         
