--- a/src/templates/nascar_admin.html
+++ b/src/templates/nascar_admin.html
@@ -41,7 +41,7 @@
         </div>
         <button type="submit" class="btn btn-success" >Load Data</button>
     </form>
-    <form id="loadEntrants" action="/nascar/load/entrants" method="post">
+    <form id="loadEntrants" action="/load/entrants" method="post">
         <div class="form-row">
             <div class="form-group col-md-6" id="entrant_type">
                 <label for="description">Type Parameter</label>
