took out jquery command on nascar admin

--- a/src/templates/nascar_admin.html
+++ b/src/templates/nascar_admin.html
@@ -67,7 +67,7 @@
                 <input type="text" id="fileEntrant" class = "form-control" name="file" value="entry_list.json" readonly>
             </div>
         </div>
-        <button type="submit" class="btn btn-success" >Load Data</button>
+        <button type="button" class="btn btn-success" >Load Data</button>
     </form>
     <form id="loadQualify" action="/nascar/load" method="post">
         <div class="form-row">
