--- a/src/templates/nascar_admin.html
+++ b/src/templates/nascar_admin.html
@@ -130,7 +130,7 @@ $(document).ready(function() {
                 console.log(data);
                 race_data = '';
                 $.each(data, function() {
-                    race_data += '<option name=\"' +$(this).attr('race_id')+ '\">'+ $(this).attr('race_name') + ' @ ' + $(this).attr('track') +'</option>';
+                    race_data += '<option value=\"' +$(this).attr('race_id')+ '\">'+ $(this).attr('race_name') + ' @ ' + $(this).attr('track') +'</option>';
                 });  // end each
                 $('#race_drop_down').append(race_data);
             }  //end success
