took out jquery command on nascar admin

--- a/src/templates/drivers_load.html
+++ b/src/templates/drivers_load.html
@@ -9,8 +9,8 @@
                 <th scope="col">Driver</th>
                 <th scope="col">Car Number</th>
                 <th scope="col">Manufacturer</th>
-                <th scope="col">Crew Chief</th>
-                <th scope="col">Team</th>
+              <!--  <th scope="col">Crew Chief</th>
+                <th scope="col">Team</th> -->
             </tr>
         </thead>
         <tbody>
@@ -19,8 +19,8 @@
                 <td>{{ entrant['drv_full'] }}</td>
                 <td>{{ entrant['car_num'] }}</td>
                 <td>{{ entrant['mfg'] }}</td>
-                <td>{{ entrant['crew_chief'] }}</td>
-                <td>{{ race['team_id'] }}</td>
+             <!--   <td>{{ entrant['crew_chief'] }}</td>
+               <td>{{ race['team_id'] }}</td>  -->
             </tr>
             {% endfor %}
         </tbody>
@@ -33,8 +33,8 @@
                 <th scope="col">Driver</th>
                 <th scope="col">Car Number</th>
                 <th scope="col">Manufacturer</th>
-                <th scope="col">Crew Chief</th>
-                <th scope="col">Team</th>
+             <!--   <th scope="col">Crew Chief</th>
+                <th scope="col">Team</th> -->
             </tr>
         </thead>
         <tbody>
@@ -43,8 +43,8 @@
                 <td>{{ entrant['drv_full'] }}</td>
                 <td>{{ entrant['car_num'] }}</td>
                 <td>{{ entrant['mfg'] }}</td>
-                <td>{{ entrant['crew_chief'] }}</td>
-                <td>{{ race['team_id'] }}</td>
+             <!--   <td>{{ entrant['crew_chief'] }}</td>
+                <td>{{ race['team_id'] }}</td> -->
             </tr>
             {% endfor %}
         </tbody>
