took out jquery command on nascar admin

--- a/src/templates/drivers_load.html
+++ b/src/templates/drivers_load.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="container">
     <p>{{  text  }}</p>
-    <h2>Drivers Loaded for {{  entrant[0]['race_id'] </h2>
+    <h2>Drivers Loaded for {{  entrants[0]['race_id'] </h2>
     <table class="table table-striped">
         <thead class="thead-light">
             <tr>
