--- a/src/templates/drivers_load.html
+++ b/src/templates/drivers_load.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="container">
-    <p>{{  text  }}</p><a href="nascar/admin">Return to Nascar Admin</a>
+    <p>{{  text  }}</p><a href="/nascar/admin">Return to Nascar Admin</a>
     {% if entrants %}
     <h2>Drivers Loaded for {{  entrants[0]['race_name']  }} </h2>
     {% else %}
