took out jquery command on nascar admin

--- a/src/templates/drivers_load.html
+++ b/src/templates/drivers_load.html
@@ -4,8 +4,10 @@
     <p>{{  text  }}</p><a href="/nascar/admin">Return to Nascar Admin</a>
     {% if entrants %}
     <h2>Drivers Loaded for {{  entrants[0]['race_name']  }} </h2>
-    {% else %}
+    {% elif ignore_list %}
     <h2>Drivers Loaded for {{  ignore_list[0]['race_name']  }} </h2>
+    {% else %}
+    <h2>No new data from SportRadar</h2>
     {% endif %}
     <table class="table table-striped">
         <thead class="thead-light">
@@ -30,8 +32,10 @@
     </table>
     {% if entrants %}
     <h2>Drivers Ignored for {{  entrants[0]['race_name']  }} </h2>
-    {% else %}
+    {% elif ignore_list %}
     <h2>Drivers Ignored for {{  ignore_list[0]['race_name']  }} </h2>
+    {% else %}
+    <h2>No new data from SportRadar</h2>
     {% endif %}
     <table class="table table-striped">
         <thead class="thead-light">
