--- a/src/templates/drivers_load.html
+++ b/src/templates/drivers_load.html
@@ -15,7 +15,7 @@
                 <th scope="col">Driver</th>
                 <th scope="col">Car Number</th>
                 <th scope="col">Manufacturer</th>
-
+                <th scope="col">Crew_Chief</th>
             </tr>
         </thead>
         <tbody>
@@ -24,6 +24,7 @@
                 <td>{{ entrant['drv_full'] }}</td>
                 <td>{{ entrant['car_num'] }}</td>
                 <td>{{ entrant['mfg'] }}</td>
+                <td>{{ entrant['crew_chief'] }}</td>
 
             </tr>
             {% endfor %}
@@ -43,7 +44,7 @@
                 <th scope="col">Driver</th>
                 <th scope="col">Car Number</th>
                 <th scope="col">Manufacturer</th>
-
+                <th scope="col">Crew Chief</th>
             </tr>
         </thead>
         <tbody>
@@ -52,7 +53,7 @@
                 <td>{{ entrant['drv_full'] }}</td>
                 <td>{{ entrant['car_num'] }}</td>
                 <td>{{ entrant['mfg'] }}</td>
-
+                <td>{{ entrant['crew_chief'] }}</td>
             </tr>
             {% endfor %}
         </tbody>
