took out jquery command on nascar admin

--- a/src/templates/drivers_load.html
+++ b/src/templates/drivers_load.html
@@ -17,6 +17,7 @@
                 <th scope="col">Manufacturer</th>
                 <th scope="col">Crew_Chief</th>
                 <th scope="col">Owner ID</th>
+                <th scope="col">Team ID ID</th>
             </tr>
         </thead>
         <tbody>
@@ -27,6 +28,7 @@
                 <td>{{ entrant['mfg'] }}</td>
                 <td>{{ entrant['crew_chief'] }}</td>
                 <td>{{ entrant['owner_id'] }}</td>
+                <td>{{ entrant['team_id'] }}</td>
             </tr>
             {% endfor %}
         </tbody>
@@ -47,6 +49,7 @@
                 <th scope="col">Manufacturer</th>
                 <th scope="col">Crew Chief</th>
                 <th scope="col">Owner ID</th>
+                <th scope="col">Team ID</th>
             </tr>
         </thead>
         <tbody>
@@ -57,6 +60,7 @@
                 <td>{{ entrant['mfg'] }}</td>
                 <td>{{ entrant['crew_chief'] }}</td>
                 <td>{{ entrant['owner_id'] }}</td>
+                <td>{{ entrant['team_id'] }}</td>
             </tr>
             {% endfor %}
         </tbody>
