added jpg image to nascar home

--- a/src/templates/nascar_home.html
+++ b/src/templates/nascar_home.html
@@ -4,7 +4,7 @@
 
     <div class="container">
         <div class="media">
-            <img src='/static/images/IMG_1153.jpg' class="img-fluid" alt="Responsive image">
+            <img src='/static/images/IMG_1153.jpg' id='img-18'class="img-fluid" alt="Responsive image">
         </div>
         <div class ="row">
             <div class="column">
