added jpg image to nascar home

--- a/src/templates/nascar_admin.html
+++ b/src/templates/nascar_admin.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="container">
+    <a href="/nascar">Nascar Home</a>
    <h1>Sport Radar Data Loads</h1>
    <div class="form-check">
         <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="Races" >
