--- a/src/templates/draft.html
+++ b/src/templates/draft.html
@@ -13,7 +13,7 @@
     <script type="text/javascript">
         var socket = io.connect('http://' + document.domain + ';' + location.port);
 
-        socket.on('connect', function() (
+        socket.on('connect', function() {
         socket.emit('my event', {
         data: 'User Connected'
         })
