added socket functionality

--- a/src/templates/draft.html
+++ b/src/templates/draft.html
@@ -12,7 +12,7 @@
 
     <script type="text/javascript">
         var socket = io.connect('http://' + document.domain + ';' + location.port);
-
+        console.log(socket)
         socket.on('connect', function() {
         socket.emit('my event', {
         data: 'User Connected'
