--- a/src/templates/draft.html
+++ b/src/templates/draft.html
@@ -12,7 +12,7 @@
 
     <script type="text/javascript">
         console.log(document.domain)
-        var socket = io.connect('http://' + document.domain + ';' + location.port);
+        var socket = io.connect('http://' + document.domain + ':' + location.port);
 
         socket.on('connect', function() {
         socket.emit('my event', {
