--- a/src/templates/draft.html
+++ b/src/templates/draft.html
@@ -12,6 +12,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js" integrity="sha256-yr4fRk/GU1ehYJPAs8P4JlTgu0Hdsp4ZKrx8bDEDC3I=" crossorigin="anonymous"></script>
     <script type="text/javascript">
         console.log(document.domain)
+        var socket = io();
         var socket = io.connect('http://' + document.domain + ':' + location.port);
 
         socket.on('connect', function() {
